--- a/action.yml
+++ b/action.yml
@@ -10,4 +10,4 @@ outputs:
         description: 'The time it took to build'
 runs:
     using: 'node20'
-    main: 'index.js'
+    main: 'dist/index.js'
