--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "GitHub action to build a ipynb into a PDF and a static GitHub page",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "ncc build index.js --license LICENSE -m"
     },
     "keywords": [
         "Jupyter",
