--- a/action.yml
+++ b/action.yml
@@ -43,4 +43,4 @@ runs:
         jupyter nbconvert ${{inputs.filename}} --TagRemovePreprocessor.remove_cell_tags='html_only' --TagRemovePreprocessor.remove_cell_tags='no_latex' --TagRemovePreprocessor.remove_input_tags='latex_only' --to pdf --template ./templates/latex --output-dir _site --output index
         jupyter nbconvert ${{inputs.filename}} --TagRemovePreprocessor.remove_input_tags='html_only' --TagRemovePreprocessor.remove_cell_tags='latex_only' --TagRemovePreprocessor.remove_cell_tags='no_html' --to html --template classic --output-dir _site --output index
         ghp-import -n -p -f _site
-        jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace ${{input.filename}}
+        jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace ${{inputs.filename}}
