--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
         description: 'Version of Python to use'
         required: true
         default: '2.19'
+    attachments:
+        description: 'Files to include in GH page and artifact'
+        required: true
+        default: [] 
 
 #outputs:
 #    time:
@@ -57,6 +61,12 @@ runs:
         jupyter nbconvert ${{inputs.filename}} --TagRemovePreprocessor.remove_cell_tags='html_only' --TagRemovePreprocessor.remove_cell_tags='no_latex' --TagRemovePreprocessor.remove_input_tags='latex_only' --to pdf --template ${{ github.action_path }}//templates/latex --output-dir _site --output index
         jupyter nbconvert ${{inputs.filename}} --TagRemovePreprocessor.remove_input_tags='html_only' --TagRemovePreprocessor.remove_cell_tags='latex_only' --TagRemovePreprocessor.remove_cell_tags='no_html' --to html --template classic --output-dir _site --output index
         jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace ${{inputs.filename}}
+    - name: Copy attachments
+      shell: bash
+      run: |
+        for f in ${{ inputs.attachements }}; do
+          cp ${f} _site
+        done  
     - name: Publish to GH Pages
       if: ${{ inputs.publish-ghpages }}
       shell: bash
